Actual LauncherUI v1 online

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">LauncherUI</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Cards</string>
+    <string name="title_section2">Watchlist</string>
+    <string name="title_section3">Closet</string>
 
     <string name="hello_world">Hello world!</string>
 
