--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_world">Hello world!</string>
 
     <string name="action_settings">Settings</string>
+    <string name="first_fragment_text">First Fragment</string>
+    <string name="second_fragment_text">Second Fragment</string>
 </resources>
