--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="action_settings">Settings</string>
     <string name="first_fragment_text">First Fragment</string>
     <string name="second_fragment_text">Second Fragment</string>
+    <string name="first_button_text">Add new card from First Fragment</string>
+    <string name="second_button_text">Add card from Second Fragment</string>
 </resources>
